--- a/TestImage/Base.lproj/Main.storyboard
+++ b/TestImage/Base.lproj/Main.storyboard
@@ -1,24 +1,163 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="EK7-G9-aOx">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="LTb-Bw-q2u"/>
+                        <viewControllerLayoutGuide type="bottom" id="xmR-5Z-e55"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IDZ-wL-mZD">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="66"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search Content" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hxb-kJ-cQh">
+                                        <rect key="frame" x="8" y="25" width="215" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="UCn-CQ-kT1"/>
+                                        </connections>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Um7-bq-AJh">
+                                        <rect key="frame" x="230" y="25" width="60" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="quI-vf-aQb"/>
+                                        </constraints>
+                                        <state key="normal" title="Search">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="onClickSearch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="udQ-Ep-kWm"/>
+                                        </connections>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ios-more-outline" translatesAutoresizingMaskIntoConstraints="NO" id="cYz-uc-7Ja">
+                                        <rect key="frame" x="290" y="25" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="JdF-Z6-JFC"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z24-Ax-HgA">
+                                        <rect key="frame" x="290" y="25" width="30" height="30"/>
+                                        <connections>
+                                            <action selector="onClickMoreOptions:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8WD-82-JvX"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="cYz-uc-7Ja" secondAttribute="bottom" constant="11" id="03Y-tu-oaI"/>
+                                    <constraint firstItem="Z24-Ax-HgA" firstAttribute="bottom" secondItem="cYz-uc-7Ja" secondAttribute="bottom" id="2Ct-W0-Q6B"/>
+                                    <constraint firstAttribute="height" constant="66" id="2DW-uA-5Nj"/>
+                                    <constraint firstAttribute="bottom" secondItem="hxb-kJ-cQh" secondAttribute="bottom" constant="11" id="7Vm-dy-a8y"/>
+                                    <constraint firstItem="hxb-kJ-cQh" firstAttribute="leading" secondItem="IDZ-wL-mZD" secondAttribute="leading" constant="8" id="7i3-px-Yv6"/>
+                                    <constraint firstItem="Um7-bq-AJh" firstAttribute="leading" secondItem="hxb-kJ-cQh" secondAttribute="trailing" constant="7" id="ALW-5X-X5C"/>
+                                    <constraint firstItem="Z24-Ax-HgA" firstAttribute="top" secondItem="cYz-uc-7Ja" secondAttribute="top" id="CO4-2t-I34"/>
+                                    <constraint firstItem="Um7-bq-AJh" firstAttribute="bottom" secondItem="cYz-uc-7Ja" secondAttribute="bottom" id="Dng-8B-aTk"/>
+                                    <constraint firstItem="cYz-uc-7Ja" firstAttribute="leading" secondItem="Um7-bq-AJh" secondAttribute="trailing" id="LnP-BI-bba"/>
+                                    <constraint firstAttribute="trailing" secondItem="cYz-uc-7Ja" secondAttribute="trailing" id="Ugm-Sz-oTP"/>
+                                    <constraint firstItem="Z24-Ax-HgA" firstAttribute="leading" secondItem="cYz-uc-7Ja" secondAttribute="leading" id="WyZ-NM-haS"/>
+                                    <constraint firstItem="Z24-Ax-HgA" firstAttribute="trailing" secondItem="cYz-uc-7Ja" secondAttribute="trailing" id="YUv-ya-tsU"/>
+                                    <constraint firstItem="Um7-bq-AJh" firstAttribute="top" secondItem="cYz-uc-7Ja" secondAttribute="top" id="idc-52-bIQ"/>
+                                    <constraint firstItem="hxb-kJ-cQh" firstAttribute="top" secondItem="IDZ-wL-mZD" secondAttribute="top" constant="25" id="vuW-3i-bYM"/>
+                                    <constraint firstItem="cYz-uc-7Ja" firstAttribute="top" secondItem="IDZ-wL-mZD" secondAttribute="top" constant="25" id="y5l-t3-0Oc"/>
+                                </constraints>
+                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="sJI-is-aBE">
+                                <rect key="frame" x="0.0" y="66" width="310" height="502"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="AW6-gy-dUa">
+                                    <size key="itemSize" width="150" height="150"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AMHomeViewCollectionViewCell" id="dYP-DP-Ufl" customClass="AMHomeViewCollectionViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5ru-fj-P67">
+                                                    <rect key="frame" x="10" y="10" width="140" height="140"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="5ru-fj-P67" firstAttribute="top" secondItem="dYP-DP-Ufl" secondAttribute="top" constant="10" id="NHw-S6-Niz"/>
+                                            <constraint firstAttribute="trailing" secondItem="5ru-fj-P67" secondAttribute="trailing" id="VQJ-dK-tOY"/>
+                                            <constraint firstItem="5ru-fj-P67" firstAttribute="leading" secondItem="dYP-DP-Ufl" secondAttribute="leading" constant="10" id="dls-cv-klB"/>
+                                            <constraint firstAttribute="bottom" secondItem="5ru-fj-P67" secondAttribute="bottom" id="pQZ-zC-ZzV"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="image_Cell" destination="5ru-fj-P67" id="fea-w5-WiD"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="BKe-UD-Giu"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="OpH-ov-7Ae"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <constraints>
+                            <constraint firstItem="sJI-is-aBE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="44P-9f-Jve"/>
+                            <constraint firstItem="xmR-5Z-e55" firstAttribute="top" secondItem="sJI-is-aBE" secondAttribute="bottom" id="LLd-FT-QVH"/>
+                            <constraint firstItem="LTb-Bw-q2u" firstAttribute="bottom" secondItem="IDZ-wL-mZD" secondAttribute="top" constant="20" id="YIL-PM-fXA"/>
+                            <constraint firstAttribute="trailing" secondItem="IDZ-wL-mZD" secondAttribute="trailing" id="kfL-d6-FkV"/>
+                            <constraint firstItem="IDZ-wL-mZD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="kx5-Re-XZB"/>
+                            <constraint firstItem="sJI-is-aBE" firstAttribute="top" secondItem="IDZ-wL-mZD" secondAttribute="bottom" id="lba-42-nVC"/>
+                            <constraint firstAttribute="trailing" secondItem="sJI-is-aBE" secondAttribute="trailing" constant="10" id="uVb-yD-2UQ"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="NUl-Bc-Tbr"/>
+                    <connections>
+                        <outlet property="collectionView_Home" destination="sJI-is-aBE" id="b95-vH-qhU"/>
+                        <outlet property="textField_Search" destination="hxb-kJ-cQh" id="Via-nx-4lX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-127.5" y="97.183098591549296"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="gtQ-5J-K7h">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="EK7-G9-aOx" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5Xc-1N-7SV">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="MM7-ft-CpV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ion-Ad-V83" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1038" y="98"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Ios-more-outline" width="64" height="320"/>
+    </resources>
 </document>
